# zero_api

./: .env  Cargo.toml  README.md  docker-compose.yml
migrations/: 20241121042005_init.down.sql  20241121042005_init.up.sql
src/: main.rs
src/models/: device.rs  mod.rs  sensor_reading.rs
src/schema/: device_schema.rs  mod.rs  sensor_reading_schema.rs
src/services/: device_service.rs  mod.rs  sensor_reading_service.rs
